--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,3 +20,6 @@ jobs: # 본격적인 동작 시작
         uses: actions/setup-node@v3.8.1
         with:
           node-version: 18.x
+
+      - name: Install Node Package
+        run: yarn install --production
