--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,5 +33,5 @@ jobs: # 본격적인 동작 시작
       - name: Docker Login
         uses: docker/login-action@v3.0.0
         with:
-          username: # optional
-          password: # optional
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
