--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,3 +35,8 @@ jobs: # 본격적인 동작 시작
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Docker Image Build and Push
+        run: |
+          docker build -t gdsc .
+          docker push ${{ secerets.DOCKER_USERNAME }}/gdsc
