--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,4 +39,4 @@ jobs: # 본격적인 동작 시작
       - name: Docker Image Build and Push
         run: |
           docker build -t gdsc .
-          docker push ${{ secerets.DOCKER_USERNAME }}/gdsc
+          docker push ${{ secrets.DOCKER_USERNAME }}/gdsc
